@@ -5,8 +5,8 @@ WriteMakefile(
     'NAME'		=> 'Math-BigRat',
     'VERSION_FROM'	=> 'lib/Math/BigRat.pm', # finds $VERSION
     'PREREQ_PM'		=> {
-			   Math::BigInt => 1.57,
-			   Math::BigFloat => 1.32,
+			   Math::BigInt => 1.61,
+			   Math::BigFloat => 1.36,
 			   }, # e.g., Module::Name => 1.1
     'INSTALLDIRS'	=> 'perl',
     'LIBS'		=> [''], # e.g., '-lm'
